next color brand-yellow

--- a/dev/sass/page/markup.scss
+++ b/dev/sass/page/markup.scss
@@ -223,15 +223,13 @@ ul {
 }
 
 /*5-6*/
-
-.font-weight-light {
-    font-weight: lighter;
-}
-
 .font-weight-bold {
     font-weight: bold;
 }
 
+.font-KyivTypeSerif {
+    font-family: $font-secondary;
+}
 /*7-8*/
 h1,
 h2,
