--- a/dev/sass/variables.scss
+++ b/dev/sass/variables.scss
@@ -1,13 +1,13 @@
 ///fonts///
-$font-primary: "Inter";
-$font-secondary: "monospace";
+$font-primary: "Rubik";
+$font-secondary: "KyivTypeSerif";
 $font-size: 16px;
 $line-height: 1.5;
 $text: #626874;
 $section-title: 32px;
 ///colors///
 $white: #fff;
-$black: #000;
+$black: #171D32;
 
 $primary-color: #3943BC;
 $primary-color-hover: #5864F9;
