--- a/dev/templates/first-screen.html
+++ b/dev/templates/first-screen.html
@@ -8,11 +8,10 @@ style="background-image: url(./assets/img/img-top-slider.jpg)"
             <div class="row-slider">
                 <div class="home-top__slider-text">
                     <div class="home-top__slider-title">
-                        Благодійний фонд Перша Зірка
+                        Благодійний фонд «Обіруч»
                     </div>
                     <p>
-                        Ми об’єднуємо людей з усього світу заради миру та добра.
-                        Долучайтеся до нашої справи!
+                     Ми об’єднуємо людей з усього світу заради миру та добра. Долучайтеся до нашої справи!
                     </p>
                     <a href="#" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#exampleModal">
                         <i class="icon-svg icon-plus"></i>
@@ -21,7 +20,7 @@ style="background-image: url(./assets/img/img-top-slider.jpg)"
                 </div>
                 <div class="home-top__slider-img">
                     <div class="home-top__slider-title home-top__slider-title-mob">
-                        Благодійний фонд Перша Зірка
+                        Благодійний фонд «Обіруч»
                     </div>
                     <img src="./assets/img/slide-home-1.png" alt="" />
                 </div>
@@ -31,11 +30,10 @@ style="background-image: url(./assets/img/img-top-slider.jpg)"
             <div class="wrapper row-slider">
                 <div class="home-top__slider-text">
                     <div class="home-top__slider-title">
-                        Благодійний фонд Перша Зірка
+                        Благодійний фонд «Обіруч»
                     </div>
                     <p>
-                        Ми об’єднуємо людей з усього світу заради миру та добра.
-                        Долучайтеся до нашої справи!
+                     Ми об’єднуємо людей з усього світу заради миру та добра. Долучайтеся до нашої справи!
                     </p>
                     <a href="#" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#exampleModal">
                         <i class="icon-svg icon-plus"></i>
@@ -44,7 +42,7 @@ style="background-image: url(./assets/img/img-top-slider.jpg)"
                 </div>
                 <div class="home-top__slider-img">
                     <div class="home-top__slider-title home-top__slider-title-mob">
-                        Благодійний фонд Перша Зірка
+                        Благодійний фонд «Обіруч»
                     </div>
                     <img src="./assets/img/slide-home-2.png" alt="" />
                 </div>
@@ -54,11 +52,10 @@ style="background-image: url(./assets/img/img-top-slider.jpg)"
             <div class="wrapper row-slider">
                 <div class="home-top__slider-text">
                     <div class="home-top__slider-title">
-                        Благодійний фонд Перша Зірка
+                        Благодійний фонд «Обіруч»
                     </div>
                     <p>
-                        Ми об’єднуємо людей з усього світу заради миру та добра.
-                        Долучайтеся до нашої справи!
+                     Ми об’єднуємо людей з усього світу заради миру та добра. Долучайтеся до нашої справи!
                     </p>
                     <a href="#" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#exampleModal">
                         <i class="icon-svg icon-plus"></i>
@@ -67,7 +64,7 @@ style="background-image: url(./assets/img/img-top-slider.jpg)"
                 </div>
                 <div class="home-top__slider-img">
                     <div class="home-top__slider-title home-top__slider-title-mob">
-                        Благодійний фонд Перша Зірка
+                        Благодійний фонд «Обіруч»
                     </div>
                     <img src="./assets/img/slide-home-3.png" alt="" />
                 </div>
@@ -77,11 +74,10 @@ style="background-image: url(./assets/img/img-top-slider.jpg)"
             <div class="wrapper row-slider">
                 <div class="home-top__slider-text">
                     <div class="home-top__slider-title">
-                        Благодійний фонд Перша Зірка
+                        Благодійний фонд «Обіруч»
                     </div>
                     <p>
-                        Ми об’єднуємо людей з усього світу заради миру та добра.
-                        Долучайтеся до нашої справи!
+                     Ми об’єднуємо людей з усього світу заради миру та добра. Долучайтеся до нашої справи!
                     </p>
                     <a href="#" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#exampleModal">
                         <i class="icon-svg icon-plus"></i>
@@ -90,7 +86,7 @@ style="background-image: url(./assets/img/img-top-slider.jpg)"
                 </div>
                 <div class="home-top__slider-img">
                     <div class="home-top__slider-title home-top__slider-title-mob">
-                        Благодійний фонд Перша Зірка
+                        Благодійний фонд «Обіруч»
                     </div>
                     <img src="./assets/img/slide-home-4.png" alt="" />
                 </div>
