--- a/dev/sass/_fonts.scss
+++ b/dev/sass/_fonts.scss
@@ -1,25 +1,25 @@
 /* === BEGIN FONTS === */
 
 @font-face {
-    font-family: 'Inter';
-    src: url('./assets/fonts/Inter-ExtraLight.ttf') format('opentype');
-    font-weight: 200; 
+    font-family: 'KyivTypeSerif';
+    src: url('./assets/fonts/KyivTypeSerif-VarGX.ttf') format('opentype');
+    font-weight: 500; 
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Inter';
-    src: url('./assets/fonts/Inter-Regular.ttf') format('opentype');
+    font-family: 'Rubik';
+    src: url('./assets/fonts/Rubik-Regular.ttf') format('opentype');
     font-weight: normal; 
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Inter';
-    src: url('./assets/fonts/Inter-SemiBold.ttf') format('opentype');
-    font-weight: 600; 
+    font-family: 'Rubik';
+    src: url('./assets/fonts/Rubik-Medium.ttf') format('opentype');
+    font-weight: 500; 
     font-style: normal;
     font-display: swap;
 }
