--- a/dev/sass/header.scss
+++ b/dev/sass/header.scss
@@ -1,250 +1,297 @@
 .header {
-	padding: 25px 0;
-	background: #fff;
-	position: relative;
+    padding: 21.5px 0;
+    background: $primary-color;
+    position: relative;
 
-	.logo {
-		margin-top: -25px;
-	}
-	a {
-		color: #0b305d;
-		text-decoration: none;
-		font-size: 16px;
-		font-weight: 500;
-		&:hover:not(.btn) {
-			color: #009edd;
-		}
-	}
-	ul li:before {
-		display: none;
-	}
-	&__menu-wrap {
-		display: flex;
-		align-items: center;
-		nav {
-			margin-left: 70px;
-		}
-		ul {
-			display: flex;
-			margin: 0;
-			li + li {
-				margin-left: 24px;
-			}
-		}
-	}
-	&__info-wrap {
-		> * {
-			margin-left: 30px;
-		}
-	}
-	.btn {
-		font-weight: 600;
-		font-size: 14px;
-	}
-	.menu-item-has-children {
-		position: relative;
-		padding-right: 20px;
-		> svg {
-			position: absolute;
-			right: 0px;
-			top: 9px;
-			cursor: pointer;
-			&:hover {
-				path {
-					fill: #009edd;
-				}
-			}
-		}
-		&.open-menu {
-			> a {
-				color: #009edd;
-			}
-			svg {
-				transform: scale(1, -1);
-				path {
-					fill: #009edd;
-				}
-			}
-			.sub-menu {
-				opacity: 1;
-				pointer-events: unset;
-			}
-		}
-	}
-	.sub-menu {
-		position: absolute;
-		display: flex;
-		flex-direction: column;
-		background-color: #fff;
-		padding: 30px;
-		border-radius: 12px;
-		left: -30px;
-		top: 78px;
-		opacity: 0;
-		pointer-events: none;
-		li + li {
-			margin-left: 0;
-			margin-top: 18px;
-		}
-		a {
-			white-space: nowrap;
-		}
-	}
-	nav {
-		ul {
-			a:hover {
-				color: #009edd;
-			}
-		}
-	}
+
+    a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: 500;
+
+        &:hover:not(.btn) {
+            color: #009edd;
+        }
+    }
+
+    ul li:before {
+        display: none;
+    }
+
+    &__menu-wrap {
+        display: flex;
+        align-items: center;
+
+        nav {
+            margin-left: 70px;
+        }
+
+        ul {
+            display: flex;
+            margin: 0;
+
+            li+li {
+                margin-left: 24px;
+            }
+        }
+    }
+
+    &__info-wrap {
+        >* {
+            margin-left: 30px;
+        }
+    }
+
+    .btn {
+        font-weight: 600;
+        font-size: 14px;
+        padding: 12px 29px;
+		color: $black;
+    }
+
+    .menu-item-has-children {
+        position: relative;
+        padding-right: 20px;
+
+        >svg {
+            position: absolute;
+            right: 0px;
+            top: 9px;
+            cursor: pointer;
+
+            &:hover {
+                path {
+                    fill: #009edd;
+                }
+            }
+        }
+
+        &.open-menu {
+            >a {
+                color: #009edd;
+            }
+
+            svg {
+                transform: scale(1, -1);
+
+                path {
+                    fill: #009edd;
+                }
+            }
+
+            .sub-menu {
+                opacity: 1;
+                pointer-events: unset;
+            }
+        }
+    }
+
+    .sub-menu {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        background-color: #fff;
+        padding: 30px;
+        border-radius: 12px;
+        left: -30px;
+        top: 78px;
+        opacity: 0;
+        pointer-events: none;
+
+        li+li {
+            margin-left: 0;
+            margin-top: 18px;
+        }
+
+        a {
+            white-space: nowrap;
+        }
+    }
+
+    nav {
+        ul {
+            a:hover {
+                color: #009edd;
+            }
+        }
+    }
 }
 
 .phone-dropdown {
-	position: relative;
-	.btn-mob-phone {
-		display: none;
-		i {
-			width: 20px;
-			height: 20px;
-		}
-	}
-	&__top {
-		display: flex;
-		align-items: center;
-		a {
-			font-size: 16px;
-			font-weight: 700;
-		}
-		svg {
-			margin-left: 10px;
-			transition: all 0.2s;
-			cursor: pointer;
-		}
-	}
-	&__menu {
-		position: absolute;
-		background-color: #fff;
-		padding: 30px 30px 35px;
-		border-radius: 12px;
-		width: max-content;
-		flex-direction: column;
-		display: none;
-		top: 60px;
-		box-shadow: 0px 0px 6px #0b305d33;
-		right: 0;
+    position: relative;
 
-		ul {
-			margin: 0;
-		}
-		a {
-			font-size: 18px;
-			font-weight: 500;
-			& + a {
-				margin-left: 12px;
-			}
-		}
-		.email {
-			font-size: 16px;
-			color: $primary-color;
-			margin-top: 24px;
-			margin-bottom: 35px;
-		}
-		.btn {
-			margin-left: 0;
-		}
-	}
-	&.open-dropdown {
-		.phone-dropdown__top {
-			svg {
-				transform: scale(1, -1);
-			}
-		}
-		.phone-dropdown__menu {
-			display: flex;
-		}
-	}
+    .btn-mob-phone {
+        display: none;
+
+        i {
+            width: 20px;
+            height: 20px;
+        }
+    }
+
+    &__top {
+        display: flex;
+        align-items: center;
+
+        a {
+            font-size: 16px;
+            font-weight: 700;
+        }
+
+        svg {
+            margin-left: 10px;
+            transition: all 0.2s;
+            cursor: pointer;
+        }
+    }
+
+    &__menu {
+        position: absolute;
+        background-color: #fff;
+        padding: 30px 30px 35px;
+        border-radius: 12px;
+        width: max-content;
+        flex-direction: column;
+        display: none;
+        top: 60px;
+        box-shadow: 0px 0px 6px #0b305d33;
+        right: 0;
+
+        ul {
+            margin: 0;
+        }
+
+        a {
+            font-size: 18px;
+            font-weight: 500;
+
+            &+a {
+                margin-left: 12px;
+            }
+        }
+
+        .email {
+            font-size: 16px;
+            color: $primary-color;
+            margin-top: 24px;
+            margin-bottom: 35px;
+        }
+
+        .btn {
+            margin-left: 0;
+        }
+    }
+
+    &.open-dropdown {
+        .phone-dropdown__top {
+            svg {
+                transform: scale(1, -1);
+            }
+        }
+
+        .phone-dropdown__menu {
+            display: flex;
+        }
+    }
 }
 
 .lang-dropdown {
-	position: relative;
-	&__menu {
-		position: absolute;
-		background-color: #fff;
-		box-shadow: 0px 0px 6px #0b305d33;
-		padding: 30px 30px 35px;
-		border-radius: 12px;
-		min-width: 220px;
-		top: 60px;
-		right: 0;
-		display: none;
-		ul {
-			margin: 0;
-			li {
-				margin-bottom: 15px;
-				a {
-					display: flex;
-					align-items: center;
-					img {
-						margin-right: 15px;
-						width: 22px;
-						height: 16px;
-						object-fit: cover;
-					}
-				}
-				&:last-child {
-					margin-bottom: 0;
-				}
-			}
-		}
-	}
-	&.open-dropdown {
-		.btn-icon {
-			border: 2px solid #009edd;
-			box-shadow: 0px 0px 6px #0b305d33;
-		}
-		.lang-dropdown__menu {
-			display: block;
-		}
-	}
+    position: relative;
+
+    &__menu {
+        position: absolute;
+        background-color: #fff;
+        box-shadow: 0px 0px 6px #0b305d33;
+        padding: 30px 30px 35px;
+        border-radius: 12px;
+        min-width: 220px;
+        top: 60px;
+        right: 0;
+        display: none;
+
+        ul {
+            margin: 0;
+
+            li {
+                margin-bottom: 15px;
+
+                a {
+                    display: flex;
+                    align-items: center;
+
+                    img {
+                        margin-right: 15px;
+                        width: 22px;
+                        height: 16px;
+                        object-fit: cover;
+                    }
+                }
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
+    }
+
+    &.open-dropdown {
+        .btn-icon {
+            border: 2px solid #009edd;
+            box-shadow: 0px 0px 6px #0b305d33;
+        }
+
+        .lang-dropdown__menu {
+            display: block;
+        }
+    }
 }
 
 .btn-menu {
-	width: 24px;
-	height: 24px;
-	position: relative;
-	display: none;
-	span {
-		display: block;
-		width: 100%;
-		height: 3px;
-		background-color: #374957;
-		position: absolute;
-		right: 0;
-		border-radius: 3px;
-		transition: all 0.3s;
-		&:nth-child(1) {
-			top: 3px;
-		}
-		&:nth-child(2) {
-			top: 50%;
-			margin-top: -1.5px;
-			transition: all 0.2s;
-		}
-		&:nth-child(3) {
-			bottom: 3px;
-		}
-	}
+    width: 24px;
+    height: 24px;
+    position: relative;
+    display: none;
+
+    span {
+        display: block;
+        width: 100%;
+        height: 3px;
+        background-color: #374957;
+        position: absolute;
+        right: 0;
+        border-radius: 3px;
+        transition: all 0.3s;
+
+        &:nth-child(1) {
+            top: 3px;
+        }
+
+        &:nth-child(2) {
+            top: 50%;
+            margin-top: -1.5px;
+            transition: all 0.2s;
+        }
+
+        &:nth-child(3) {
+            bottom: 3px;
+        }
+    }
 }
+
 .mob-menu-bot {
-	display: none;
-	.lang-row {
-		display: flex;
-		align-items: center;
-		> div {
-			background-color: #fff;
-		}
-		> :first-child {
-			margin-right: 20px;
-		}
-	}
+    display: none;
+
+    .lang-row {
+        display: flex;
+        align-items: center;
+
+        >div {
+            background-color: #fff;
+        }
+
+        > :first-child {
+            margin-right: 20px;
+        }
+    }
 }
