--- a/dev/sass/page/home.scss
+++ b/dev/sass/page/home.scss
@@ -32,11 +32,11 @@
         &-item {}
 
         &-title {
-            font-weight: 600;
             font-size: 54px;
             line-height: 60px;
             color: #ffffff;
             margin-bottom: 20px;
+            font-family: $font-secondary; 
 
             &-mob {
                 display: none;
