--- a/dev/templates/head.html
+++ b/dev/templates/head.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content="#005BBB">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-    <title>Перша Зiрка</title>
+    <title>Благодійний фонд «Обіруч»</title>
     <link rel="shortcut icon" href="assets/img/favicon.png" />
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css" />
