--- a/dev/sass/other/accordion-template.scss
+++ b/dev/sass/other/accordion-template.scss
@@ -11,7 +11,7 @@
 }
 
 .accordion-item{
-    box-shadow: 0px 6px 24px rgba(11, 48, 93, 0.2);
+    box-shadow: 0px 6px 24px #0b305d33;
     border-radius: 12px;    
     margin-bottom: 24px;
     border: none;
