--- a/dev/sass/page/markup.scss
+++ b/dev/sass/page/markup.scss
@@ -438,10 +438,12 @@ input:checked+label {
     border-radius: 50%;
     cursor: pointer;
     transition: none;
-
+    border: 2px solid $primary-color-hover;
+ 
     &:hover {
-        border: 2px solid #009edd;
+        border: 2px solid $primary-color-hover;
         box-shadow: 0px 0px 6px rgba(11, 48, 93, 0.2);
+        background-color: $primary-color-hover;
     }
 }
 
