next global color

--- a/dev/sass/media/_media_max_width1199.scss
+++ b/dev/sass/media/_media_max_width1199.scss
@@ -242,7 +242,7 @@
 
     .phone-dropdown.open-dropdown {
         .btn-icon {
-            background-color: $primary-color;
+            background-color: $primary-color-hover;
             border: 2px solid $primary-color-hover;
             &:hover{
                 background-color: $primary-color-hover;
