--- a/dev/sass/header.scss
+++ b/dev/sass/header.scss
@@ -245,8 +245,9 @@
 
     &.open-dropdown {
         .btn-icon {
-            border: 2px solid #009edd;
-            box-shadow: 0px 0px 6px #0b305d33;
+			border: 2px solid #5864F9;
+			box-shadow: 0px 0px 6px #0b305d33;
+			background-color: #5864F9;
         }
 
         .lang-dropdown__menu {
