header desctop done

--- a/dev/sass/footer.scss
+++ b/dev/sass/footer.scss
@@ -2,7 +2,7 @@
 	background: #002c5e;
 	padding: 70px 0px 0;
 	&__title {
-		color: #009edd;
+		color: #5864F9;
 		font-size: 18px;
 		font-weight: 600;
 		margin-bottom: 35px;
