--- a/dev/sass/media/_media_max_width767.scss
+++ b/dev/sass/media/_media_max_width767.scss
@@ -45,4 +45,10 @@
         font-size: 17px;
     }
 
+    .lang-dropdown__menu{
+        top: 70px;
+    }
+    .phone-dropdown__menu {
+        top: 80px;
+    }
 }
