--- a/dev/sass/other/accordion-template.scss
+++ b/dev/sass/other/accordion-template.scss
@@ -5,7 +5,7 @@
 .accordion-title {
     font-weight: 600;
     font-size: 24px;
-    color: #009EDD;
+    color: #5864F9;
     text-align: center;
     margin-bottom: 28px;
 }
