--- a/dev/sass/other/form-block.scss
+++ b/dev/sass/other/form-block.scss
@@ -19,7 +19,7 @@
             &:hover {
                 svg {
                     path {
-                        fill: #009edd;
+                        fill: #5864F9;
                     }
                 }
             }
@@ -74,7 +74,7 @@
         right: 0;
         top: 0;
         height: 13px;
-        background: #009edd;
+        background: #5864F9;
         border-radius: 18px 18px 0px 0px;
     }
 
@@ -123,7 +123,7 @@
             }
 
             &:hover {
-                background: #009edd;
+                background: #5864F9;
                 color: #fff;
                 transition: all 0.2s;
             }
@@ -140,7 +140,7 @@
         margin-bottom: 15px;
 
         span {
-            color: #009EDD;
+            color: #5864F9;
         }
     }
 
@@ -223,7 +223,7 @@
         font-size: 16px;
 
         li:hover {
-            color: #009edd;
+            color: #5864F9;
         }
     }
 
