--- a/dev/sass/other/slider-templates.scss
+++ b/dev/sass/other/slider-templates.scss
@@ -67,7 +67,7 @@
             box-orient: vertical;
 
             &:hover {
-                color: #009edd;
+                color: #5864F9;
             }
         }
     }
