--- a/dev/sass/page/home.scss
+++ b/dev/sass/page/home.scss
@@ -105,7 +105,7 @@
                 a {
                     &:hover {
                         svg {
-                            fill: #009edd;
+                            fill: #5864F9;
                         }
                     }
                 }
@@ -115,7 +115,7 @@
         a:hover {
             svg {
                 path {
-                    fill: #009edd;
+                    fill: #5864F9;
                 }
             }
         }
