--- a/dev/sass/other/about-block.scss
+++ b/dev/sass/other/about-block.scss
@@ -20,7 +20,7 @@
         &-title {
             font-weight: 600;
             font-size: 42px;
-            color: #009edd;
+            color: #5864F9;
             margin-bottom: 9px;
         }
 
